--- a/src/Mycode/DFO_v1.ipynb
+++ b/src/Mycode/DFO_v1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Jordan Lankford\\AppData\\Local\\Temp\\ipykernel_19460\\2027990685.py:55: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "C:\\Users\\Jordan Lankford\\AppData\\Local\\Temp\\ipykernel_22692\\2027990685.py:55: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  state_dict = torch.load(model_path)\n"
      ]
     }
@@ -128,14 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,12 +187,10 @@
     "import gymnasium as gym\n",
     "from torchsummary import summary\n",
     "\n",
-    "# Assuming QNetwork and set_seeds are defined earlier in the code\n",
-    "# Assuming the reshape function is defined as needed\n",
     "\n",
     "\n",
-    "def f(fly, flies_history, model=q_network,env=env):\n",
-    "    # Clone the model (you don't really need to clone in PyTorch, just create a new instance)\n",
+    "def f(fly, flies_history = None, model=q_network,env=env):\n",
+    "    \n",
     "    cloned_model = q_network\n",
     "    \n",
     "    # Reshape fly's weights to match the model's weight shape\n",
@@ -215,7 +206,7 @@
     "    episode_rewards = []\n",
     "    episode_lengths = []\n",
     "    \n",
-    "    num_episodes = 10000  # or any other number you'd like to test  USE 100000 FOR STABAL ISH\n",
+    "    num_episodes = 10000  # or any other number you'd like to test  USE 10000 FOR STABAL ISH\n",
     "    for episode in range(num_episodes):\n",
     "        state, info = env.reset()\n",
     "        episode_reward = 0\n",
@@ -242,13 +233,126 @@
     "\n",
     "    fitness = np.mean(episode_rewards)\n",
     "    # Return the average reward (or any other metric you want)\n",
-    "    return -f_avrg(fitness, flies_history)\n",
-    "    #return -fitness\n"
+    "    #return -f_avrg(fitness, flies_history)\n",
+    "    return -fitness\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing sequential evaluation:\n",
+      "Sequential result: -0.809\n",
+      "Sequential time: 33.63s\n",
+      "\n",
+      "Testing parallel evaluation:\n",
+      "Evaluated 10000 episodes in 50.38 seconds\n",
+      "Parallel result: -0.8062\n",
+      "Parallel time: 50.39s\n",
+      "\n",
+      "Speedup: 0.67x\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "from parallel_fitness import parallel_fitness, QNetwork\n",
+    "import time \n",
+    "\n",
+    "def f_parallel(fly, model=q_network, num_processes=4):\n",
+    "    \"\"\"\n",
+    "    Wrapper for parallel fitness evaluation\n",
+    "    \"\"\"\n",
+    "    reshaped_fly = reshape_to_model_weights(fly, model)\n",
+    "    state_dict = dict(zip([name for name, _ in model.named_parameters()], reshaped_fly))\n",
+    "    return parallel_fitness(state_dict, num_processes=num_processes)\n",
+    "\n",
+    "\n",
+    "# Compare performance\n",
+    "print(\"Testing sequential evaluation:\")\n",
+    "start = time.perf_counter()\n",
+    "result_seq = f(flies[0])\n",
+    "time_seq = time.perf_counter() - start\n",
+    "print(f\"Sequential result: {result_seq}\")\n",
+    "print(f\"Sequential time: {time_seq:.2f}s\")\n",
+    "\n",
+    "print(\"\\nTesting parallel evaluation:\")\n",
+    "start = time.perf_counter()\n",
+    "result_par = f_parallel(flies[0], num_processes=4)\n",
+    "time_par = time.perf_counter() - start\n",
+    "print(f\"Parallel result: {result_par}\")\n",
+    "print(f\"Parallel time: {time_par:.2f}s\")\n",
+    "\n",
+    "print(f\"\\nSpeedup: {time_seq/time_par:.2f}x\")'\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Testing vectorized evaluation:\n",
+      "Evaluated 1068 episodes in 2.43 seconds\n",
+      "Vectorized result: -0.0\n",
+      "Vectorized time: 3.88s\n",
+      "Testing sequential evaluation:\n",
+      "Sequential result: -0.8124\n",
+      "Sequential time: 37.90s\n",
+      "\n",
+      "Speedup: 9.77x\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "'''\n",
+    "from vectorized_fitness import vectorized_fitness, QNetwork\n",
+    "import time\n",
+    "\n",
+    "def f_vectorized(fly, model=q_network, num_envs=4):\n",
+    "    \"\"\"\n",
+    "    Wrapper for vectorized fitness evaluation\n",
+    "    \"\"\"\n",
+    "    reshaped_fly = reshape_to_model_weights(fly, model)\n",
+    "    state_dict = dict(zip([name for name, _ in model.named_parameters()], reshaped_fly))\n",
+    "    return vectorized_fitness(state_dict, num_envs=num_envs)\n",
+    "\n",
+    "# Test code\n",
+    "\n",
+    "\n",
+    "print(\"\\nTesting vectorized evaluation:\")\n",
+    "start = time.perf_counter()\n",
+    "result_vec = f_vectorized(flies[0], num_envs=4)\n",
+    "time_vec = time.perf_counter() - start\n",
+    "print(f\"Vectorized result: {result_vec}\")\n",
+    "print(f\"Vectorized time: {time_vec:.2f}s\")\n",
+    "\n",
+    "\n",
+    "print(\"Testing sequential evaluation:\")\n",
+    "start = time.perf_counter()\n",
+    "result_seq = f(flies[0])\n",
+    "time_seq = time.perf_counter() - start\n",
+    "print(f\"Sequential result: {result_seq}\")\n",
+    "print(f\"Sequential time: {time_seq:.2f}s\")\n",
+    "\n",
+    "print(f\"\\nSpeedup: {time_seq/time_vec:.2f}x\")'\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,11 +432,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([128, 716])\n",
+      "torch.Size([128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128])\n",
+      "torch.Size([25, 128])\n",
+      "torch.Size([25])\n",
+      "torch.Size([128, 716])\n",
+      "torch.Size([128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128])\n",
+      "torch.Size([25, 128])\n",
+      "torch.Size([25])\n",
+      "torch.Size([128, 716])\n",
+      "torch.Size([128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128])\n",
+      "torch.Size([25, 128])\n",
+      "torch.Size([25])\n",
+      "torch.Size([128, 716])\n",
+      "torch.Size([128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128])\n",
+      "torch.Size([25, 128])\n",
+      "torch.Size([25])\n",
+      "torch.Size([128, 716])\n",
+      "torch.Size([128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128])\n",
+      "torch.Size([25, 128])\n",
+      "torch.Size([25])\n",
+      "torch.Size([128, 716])\n",
+      "torch.Size([128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128])\n",
+      "torch.Size([25, 128])\n",
+      "torch.Size([25])\n",
+      "torch.Size([128, 716])\n",
+      "torch.Size([128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128])\n",
+      "torch.Size([25, 128])\n",
+      "torch.Size([25])\n",
+      "torch.Size([128, 716])\n",
+      "torch.Size([128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128])\n",
+      "torch.Size([25, 128])\n",
+      "torch.Size([25])\n",
+      "torch.Size([128, 716])\n",
+      "torch.Size([128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128])\n",
+      "torch.Size([25, 128])\n",
+      "torch.Size([25])\n"
+     ]
+    }
+   ],
    "source": [
-    "num_of_flies = 1\n",
+    "num_of_flies = 10\n",
     "\n",
     "flies = initialize_flies_from_model(num_of_flies,weights,q_network,True)\n",
     "\n",
@@ -345,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,143 +543,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "deque([np.float64(0.803), np.float64(0.8148)], maxlen=5)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "np.float64(-0.8089)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "f(flies[0],flies_history[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "111513"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(flies[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "N = len(flies)\t\t\t# POPULATION SIZE\n",
     "D = len(flies[0])\t\t\t\t\t# DIMENSIONALITY \n",
     "delta = 0.005\t\t\t# DISTURBANCE THRESHOLD \n",
-    "maxIterations = 1\t# ITERATIONS ALLOWED"
+    "maxIterations = 200\t# ITERATIONS ALLOWED"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def DFO(start_flies):\n",
     "    \"\"\"\n",
-    "    Vectorized DFO implementation for DQN weight optimization\n",
+    "    DFO with initial history population phase\n",
     "    \"\"\"\n",
-    "    #N = len(start_flies)          # Population size\n",
-    "    #D = len(start_flies[0])       # Dimensionality of weights\n",
-    "    #delta = 0.005                 # Disturbance threshold\n",
-    "    #maxIterations = 1000          # Max iterations allowed\n",
+    "    X = np.array(start_flies)     \n",
+    "    fitness = np.zeros(N)         \n",
+    "    flies_history = [deque(maxlen=5) for _ in range(N)]\n",
     "\n",
-    "    # Initialize population matrix\n",
-    "    X = np.array(start_flies)     # Shape: (N, D)\n",
-    "    fitness = np.zeros(N)         # Array to store fitness values\n",
-    "    flies_history = [deque(maxlen=5) for _ in range(N)]  # History for each fly\n",
-    "\n",
-    "    # Initial evaluation of all flies\n",
-    "    for i in range(N):\n",
-    "        fitness[i] = f(X[i], flies_history[i])\n",
+    "    # First phase: Populate histories for all flies\n",
+    "    print(\"Populating initial histories...\")\n",
+    "    for _ in range(max_history):  # Run evaluations to fill histories\n",
+    "        for i in range(N):\n",
+    "            fitness[i] = f(X[i], flies_history[i])\n",
+    "            print(f\"Fly {i} history: {list(flies_history[i])}\")\n",
     "    \n",
-    "    # Find initial best fly\n",
+    "    # Now all flies have full histories, start optimization\n",
     "    s = np.argmin(fitness)\n",
+    "    print(f\"\\nStarting optimization with best fly: {s}, fitness: {fitness[s]:.3f}\")\n",
     "    \n",
     "    # Main DFO loop\n",
     "    for itr in range(maxIterations):\n",
-    "        if itr % 1 == 0:\n",
-    "            print(f\"Iteration: {itr}, Best fly index: {s}, Fitness value: {fitness[s]:.3f}, delta: {delta}\")\n",
+    "        # Recalculate best fly's fitness\n",
+    "        best_fly_fitness = f(X[s], flies_history[s])\n",
+    "        fitness[s] = best_fly_fitness\n",
+    "        \n",
+    "        print(f\"\\nIteration: {itr}\")\n",
+    "        print(f\"Best fly {s} recalculated fitness: {fitness[s]:.3f}\")\n",
+    "        print(f\"Best fly history: {list(flies_history[s])}\")\n",
     "\n",
-    "        # Update each fly except the best one\n",
     "        for i in range(N):\n",
     "            if i == s:\n",
-    "                continue  # Skip best fly (elitist strategy)\n",
+    "                continue\n",
     "\n",
-    "            # Find best neighbor\n",
     "            left = (i-1) % N\n",
     "            right = (i+1) % N\n",
     "            bNeighbour = right if fitness[right] < fitness[left] else left\n",
     "\n",
-    "            # Generate random numbers for vectorized operations\n",
+    "            old_position = X[i].copy()\n",
+    "            old_fitness = fitness[i]\n",
+    "\n",
     "            U = np.random.uniform(0, 1, D)\n",
     "            R = np.random.uniform(0, 1, D)\n",
-    "\n",
-    "            # Vectorized position update\n",
     "            X[i] = np.where(R < delta,\n",
     "                           np.random.normal(loc=X[bNeighbour], scale=delta),\n",
-    "                           X[bNeighbour] + U * (X[s] - X[bNeighbour]))      #if r<delta do random else do the other selfless update\n",
+    "                           X[bNeighbour] + U * (X[s] - X[bNeighbour]))\n",
     "\n",
-    "            # Evaluate new position\n",
-    "            fitness[i] = f(X[i], flies_history[i])\n",
+    "            new_fitness = f(X[i], flies_history[i])\n",
+    "            \n",
+    "            if new_fitness < old_fitness:\n",
+    "                fitness[i] = new_fitness\n",
+    "                if new_fitness < fitness[s]:\n",
+    "                    s = i\n",
+    "                    print(f\"New best found! Fly {i}: {new_fitness:.3f}\")\n",
+    "                    print(f\"New best history: {list(flies_history[i])}\")\n",
+    "            else:\n",
+    "                X[i] = old_position\n",
+    "                fitness[i] = old_fitness\n",
     "\n",
-    "        # Update best fly\n",
-    "        new_s = np.argmin(fitness)\n",
-    "        s = new_s\n",
+    "        # After all flies updated, recheck who is best\n",
+    "        s = np.argmin(fitness)\n",
+    "        print(f\"End of iteration best fly: {s} with fitness: {fitness[s]:.3f}\")\n",
+    "        print(f\"Best fly history: {list(flies_history[s])}\")\n",
     "\n",
-    "    return X[s]  # Return best solution found"
+    "    return X[s]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[16], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m newweihgts \u001b[38;5;241m=\u001b[39m \u001b[43mDFO\u001b[49m\u001b[43m(\u001b[49m\u001b[43mflies\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[15], line 17\u001b[0m, in \u001b[0;36mDFO\u001b[1;34m(start_flies)\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;66;03m# Initial evaluation of all flies\u001b[39;00m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(N):\n\u001b[1;32m---> 17\u001b[0m     fitness[i] \u001b[38;5;241m=\u001b[39m \u001b[43mf\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mflies_history\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     19\u001b[0m \u001b[38;5;66;03m# Find initial best fly\u001b[39;00m\n\u001b[0;32m     20\u001b[0m s \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39margmin(fitness)\n",
-      "Cell \u001b[1;32mIn[6], line 41\u001b[0m, in \u001b[0;36mf\u001b[1;34m(fly, flies_history, model, env)\u001b[0m\n\u001b[0;32m     39\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mno_grad():\n\u001b[0;32m     40\u001b[0m     q_values \u001b[38;5;241m=\u001b[39m cloned_model(state_encoded, action_mask)\n\u001b[1;32m---> 41\u001b[0m     action \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43margmax\u001b[49m\u001b[43m(\u001b[49m\u001b[43mq_values\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mitem\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     43\u001b[0m next_state, reward, terminated, truncated, info \u001b[38;5;241m=\u001b[39m env\u001b[38;5;241m.\u001b[39mstep(action)\n\u001b[0;32m     44\u001b[0m episode_reward \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m reward\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "newweihgts = DFO(flies)\n"
    ]
